--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,7 +1,7 @@
 [user]
 	name = Brady Lenz
 	email = "30730494+bradylenz@users.noreply.github.com"
-	{{- if eq .mode "personal" }}
+	{{- if eq .chezmoi.hostname "brick" }}
 	signingKey = 8B8E5A4E77ABF1EE
 	{{- end }}
 [commit]
